# Oxigrad

./: Cargo.toml  LICENSE  README.md  graph.dot  simple_graph.dot
src/: lib.rs  main.rs
src/graphiz/: mod.rs  visualize.rs
src/micrograd/: engine.rs  mod.rs  nn.rs
